<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/re_father"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xn_bg_color"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/sdk_chat_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/xn_sdk_head_bg" >

        <TextView
            android:id="@+id/tv_leave_msg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/xn_leave_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/xn_white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/sdt_chat_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/chat_username"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/sdk_chat_finsh"
                android:text="@string/xn_toast_cancel"
                android:textColor="@color/xn_white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/sdk_chat_finsh"
                android:layout_width="24dp"
                android:layout_height="34dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/chat_headback" />
        </RelativeLayout>



        <TextView
            android:id="@+id/sdk_leave_finish"
            android:layout_width="62dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:text="@string/xn_submit"
            android:textColor="@color/xn_white"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sdk_chat_top"
        android:background="@color/xn_centercontent"
        android:overScrollMode="always"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/ll_leave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sdk_chat_top"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp" >

            <EditText
                android:id="@+id/tv_leavemsg"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:layout_below="@id/sdk_chat_top"
                android:layout_margin="6dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_selector"
                android:gravity="top"
                android:hint="@string/xn_leavemesg_words_hint"
                android:padding="6dp" >
            </EditText>

            <EditText
                android:id="@+id/tv_name"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edittext_selector"
                android:hint="@string/xn_leavemesg_name_hint"
                android:padding="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dp"
                    android:text="@string/xn_input_pe"
                    android:textColor="@color/xn_red" />

                <EditText
                    android:id="@+id/tv_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edittext_selector"
                    android:hint="@string/xn_leavemesg_tel_hint"
                    android:maxLength="11"
                    android:numeric="integer"
                    android:padding="6dp" />

                <EditText
                    android:id="@+id/tv_email"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/sdk_chat_top"
                    android:layout_margin="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/edittext_selector"
                    android:hint="@string/xn_leavemesg_email_hint"
                    android:padding="6dp" />

                
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>