<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/xn_normaldialog_title"
        android:textColor="@color/xn_black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_contents"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center_horizontal"
        android:text="@string/xn_getservicefail"
        android:textColor="@color/xn_black"
        android:textSize="15sp" />

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/xn_gray"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_toconfirm"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xn_confirm"
            android:textColor="@color/xn_sdk_dialog_bg"
            android:textSize="20sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="1dip"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/xn_gray" />

        <TextView
            android:id="@+id/tv_tocancel"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xn_cancel"
            android:textColor="@color/xn_sdk_dialog_bg"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>