<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@null" >

    <RelativeLayout
        android:id="@+id/rl_leave"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ad_bg" >

        <TextView
            android:id="@+id/tv_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:text="@string/xn_leave"
            android:textColor="@color/xn_black"
            android:textSize="20sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/sdk_ison"
            android:background="@color/xn_gray" />

        <LinearLayout
            android:id="@+id/sdk_ison"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/positiveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/xn_leave_message"
                android:textColor="@color/xn_leave_text_bg"
                android:textSize="18sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="1dip"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/xn_gray" />

            <TextView
                android:id="@+id/negativeButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/xn_leavemsg_dialogback"
                android:textColor="@color/xn_leave_text_bg"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>