<?xml version="1.0" encoding="utf-8"?>
<cn.xiaoneng.uiview.FaceRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FaceRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/xn_function_bg"
    android:paddingTop="8dp" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/xn_edge"
        android:visibility="gone" />

    <!--
    <TextView
        android:id="@+id/tv_toleave"
        android:layout_width="match_parent"
        android:layout_height="55dp" 
        android:text="我要留言"
        android:textColor="#000000"
        android:gravity="center"
        android:visibility="gone"
        android:background="@color/xn_function_bg"
        > 
    </TextView>
    -->

    <!-- <LinearLayout
        android:id="@+id/oo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/ooo"
        android:background="@color/xn_function_bg"
        android:orientation="horizontal" > -->

        <RelativeLayout
            android:id="@+id/oo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ooo"
            android:background="@color/xn_function_bg" >

            <RelativeLayout
                android:id="@+id/rl_001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="3dp"
                android:layout_alignBottom="@+id/rl_et_sendmessage" 
                >

                <ImageButton
                    android:id="@+id/btn_voice"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/btnvoice1"
                    android:scaleType="fitXY"
                    
                     />

                 <RelativeLayout 
                     android:id="@+id/rl_robot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:visibility="gone"
                
                    >
                     <ImageView
                    android:id="@+id/ib_robot"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/robot_selector"
                    android:layout_centerHorizontal="true"
                     /> 
                     <TextView 
                         android:id="@+id/ib_roberttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_robot"
                    android:textSize="10sp"
                    android:text="@string/xn_swifttorobot"
                    android:textColor="@color/xn_gray"
                    android:layout_centerHorizontal="true"
                         />
                </RelativeLayout>
            </RelativeLayout>

            <!-- 文本框 -->

            <RelativeLayout
                android:id="@+id/rl_et_sendmessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_face"
                android:layout_toRightOf="@+id/rl_001" >

                <cn.xiaoneng.uiview.FaceEditText
                    android:id="@+id/et_sendmessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/record1"
                    android:focusable="true"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:paddingBottom="2dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="8dp"
                    android:paddingTop="2dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColor="@color/xn_black"
                    android:textCursorDrawable="@null" />

                <Button
                    android:id="@+id/btn_record"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_alignBottom="@+id/et_sendmessage"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/recordselector"
                    android:gravity="center"
                    android:text="@string/xn_sdk_presstalk"
                    android:textColor="@color/xn_press_text"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <!-- 表情点击按钮 -->

            <ImageButton
                android:id="@+id/btn_face"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/rl_et_sendmessage"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/emo"
                android:scaleType="fitXY" />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ooo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/oo"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:background="@color/xn_function_bg" >

        <ImageButton
            android:id="@+id/btn_plus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/moreselector"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/btn_plus"
            android:background="@drawable/send_bt"
            android:text="@string/xn_custom_send"
            android:textColor="@color/xn_white"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/view02"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/oo"
        android:layout_marginTop="9dp"
        android:background="@color/xn_edge" />

    <RelativeLayout
        android:id="@+id/ll_facechoose"
        android:layout_width="fill_parent"
        android:layout_height="126dp"
        android:layout_below="@id/view02"
        android:background="@color/xn_function_bg"
        android:visibility="gone"
        >

        <cn.xiaoneng.uiview.MyViewPager
            android:id="@+id/vp_contains"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </cn.xiaoneng.uiview.MyViewPager>

        <LinearLayout
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>

</cn.xiaoneng.uiview.FaceRelativeLayout>